zarf/k8s/kustomize/base/zipkin/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      # zipkin container configuration
      - name: zipkin
        resources:
          limits:
            cpu: "500m" # Up to 1/2 full core
          requests:
            cpu: "250m" # Use 1/4 full core
