zarf/k8s/kustomize/base/zipkin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-deployment # Base POD name
spec:
  selector:
    matchLabels:
      app: zipkin # Selector for POD name search.
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      terminationGracePeriodSeconds: 60
      containers:
      # zipkin container configuration
      - name: zipkin
        image: openzipkin
        ports:
        - name: zipkin
          containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
spec:
  type: ClusterIP
  selector:
    app: zipkin
  ports:
  - name: zipkin
    port: 9411
    targetPort: zipkin
