zarf/k8s/kustomize/base/zipkin/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zipkin-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`machina-zipkin.local`)
      kind: Rule
      services:
        - name: zipkin-service
          port: 9411
